<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.team9.focus.activities.EditProfileActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <include layout="@layout/content_edit_profile" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ListView
            android:id="@+id/appList"
            android:layout_width="370dp"
            android:layout_height="366dp"
            android:padding="15dp"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_editor_absoluteX="7dp"
            android:layout_below="@+id/btnAddApp"
            android:layout_alignParentStart="true" />

        <EditText
            android:id="@+id/etCurrentProfileName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignTop="@+id/btnAddApp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_toStartOf="@+id/btnAddApp"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="Current Profile Name"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="6dp" />

        <Button
            android:id="@+id/btnAddApp"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="73dp"
            android:text="Add App"
            tools:layout_editor_absoluteX="256dp"
            tools:layout_editor_absoluteY="6dp"
            android:layout_alignParentTop="true"
            android:layout_alignEnd="@+id/btnDeleteProfile" />

        <Button
            android:id="@+id/btnDeleteProfile"
            android:layout_width="167dp"
            android:layout_height="43dp"
            android:layout_alignBottom="@+id/btnSaveProfile"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="7dp"
            android:text="Delete"
            tools:layout_editor_absoluteX="191dp"
            tools:layout_editor_absoluteY="452dp" />

        <Button
            android:id="@+id/btnSaveProfile"
            android:layout_width="167dp"
            android:layout_height="43dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="18dp"
            android:layout_marginStart="11dp"
            android:text="Save"
            tools:layout_editor_absoluteX="7dp"
            tools:layout_editor_absoluteY="452dp" />
    </RelativeLayout>

</android.support.design.widget.CoordinatorLayout>
