<resources>

    <string name="app_name">Focus</string>
    <string-array name="navigation_drawer_items_array">
        <item>Home</item>
        <item>Profile</item>
        <item>Schedule</item>
        <item>Timer</item>
        <item>Calendar</item>
...
