<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.team9.focus.activities.CreateProfileActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <include layout="@layout/content_create_profile"
        android:id="@+id/include" />

    <Button
        android:id="@+id/createButton"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:layout_gravity="top|right"
        android:text="Create Profile"
        app:layout_anchor="@+id/include"
        app:layout_anchorGravity="bottom|center_horizontal" />


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/etProfileName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="11dp"
            android:layout_marginTop="98dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="Name" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="29dp"
            android:layout_marginTop="13dp"
            android:text="Add Profile"
            android:textSize="25dp"
            android:layout_alignParentTop="true"
            android:layout_alignStart="@+id/etProfileName" />


        <ListView
            android:id="@+id/appListView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/etProfileName"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="60dp" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp" />

    </RelativeLayout>

</android.support.design.widget.CoordinatorLayout>
