<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <TextView
        android:id="@+id/tvAppName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="App Name" />
    <CheckBox
        android:id="@+id/cbAppName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
</LinearLayout>